<resources>
    <string name="app_name">MDPM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_field">用户名：</string>
    <string name="password_field">密码：</string>
    <string name="main_forget_password"><u>忘记密码??</u></string>
    <string name="password_confirm_field">确认密码：</string>
    <string name="email_field">电子邮箱</string>
    <string name="phone_field">电话号码</string>
    <string name="text_info_hint">验证信息：用于找回密码</string>
    <string name="issue_login">失败：用户名或密码错误</string>
</resources>
