<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.binzeefox.mdpm.LoginFragment">

    <FrameLayout
        android:id="@+id/focus_holder"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_field"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/issue_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/issue_login"
        android:textColor="@color/colorAccent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_bg_ripple"
            android:text="登陆"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="end"
            android:text="@string/main_forget_password"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>
